Fix: Fix alignment of project descriptions

--- a/src/style.css
+++ b/src/style.css
@@ -190,12 +190,11 @@ body {
   top: 50%;
   transform: translateY(-50%);
   width: 50%;
-  padding: 0 4rem;
+  padding: 0 4rem 0 6rem;
 }
 
 .project-description {
   position: absolute;
-  inset: 0;
   transition: opacity 0.3s ease-out;
 }
 
